--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <div class="banner display-flex">
         <div class="banner-deatials">
             <!-- h2.banner-title+p.banner-description+button.banner-join+button.banner-apa -->
-            <h2 class="banner-title">Get body in shape & stay healthy</h2>
+            <h2 class="banner-title">Get body in <span class="header-shape-style">shape</span> & stay healthy</h2>
             <p class="banner-description text-primary">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
             <button class="banner-join btn-primary">Join Club Now!</button>
             <button class="banner-app btn-primary">Download App</button>
